<resources>
    <string name="app_name">BestCourses</string>
    <string name="main">Главная</string>
    <string name="favourites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="courses_in_one_place">Тысячи курсов в одном месте</string>
    <string name="to_continue">Продолжить</string>
    <string name="search_courses">Search courses...</string>
    <string name="by_date">По дате добавления</string>
    <string name="more_details">Подробнее</string>
    <string name="Favourites">Избранное</string>
    <string name="example_email">example@gmail.com</string>
    <string name="enter">Вход</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="no_account">Нету аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forget_password">Забыл пароль</string>
</resources>