<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/Base.Theme.BestCourses"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        style="@style/edit_text_style"
        android:layout_height="40dp"
        android:hint="@string/example_email"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_password"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_the_password"
        android:textColorHint="@color/white_with_opacity"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        tools:ignore="Autofill,TextFields"/>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/best_courses_button_style"
        android:text="@string/enter"
        android:layout_marginTop="24dp"
        android:enabled="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            style="@style/green_tv"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            style="@style/green_tv"
            android:text="@string/registration"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        style="@style/green_tv"
        android:text="@string/forget_password"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        android:layout_marginTop="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp">

        <ImageButton
            android:id="@+id/btn_vk"
            style="@style/VkImageButton"
            android:src="@drawable/vk_drawable"
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btk_ok"
            style="@style/OkImageButton"
            android:src="@drawable/ok_drawable"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>